# wrkb

./: .gitignore  CLAUDE.md  OVERLAY.md  README.md  TODO.md  ingest-overlay.py  ingest-wrf.py  ingest-yt.py  pyproject.toml  wrkb.py
.cursor/rules/: base.mdc
docs/: devenv.md  ingest.md  kb.md  sources.md
kb/champions/: aatrox.md  ahri.md  akali.md  akshan.md  alistar.md  ambessa.md  amumu.md  annie.md  ashe.md  aurelion-sol.md  aurora.md  bard.md  blitzcrank.md  brand.md  braum.md  caitlyn.md  camille.md  corki.md  darius.md  diana.md  dr-mundo.md  draven.md  ekko.md  evelynn.md  ezreal.md  fiddlesticks.md  fiora.md  fizz.md  galio.md  garen.md  gnar.md  gragas.md  graves.md  gwen.md  hecarim.md  heimerdinger.md  irelia.md  janna.md  jarvan-iv.md  jax.md  (+96 more)
kb/items/: abyssal-mask.md  amaranths-twinguard.md  ancient-coin.md  archangels-staff.md  ardent-censer.md  awakened-soulstealer.md  bandle-fantasy.md  berserkers-greaves.md  black-cleaver.md  blade-of-the-ruined-king.md  bloodthirster.md  boots-of-dynamism.md  boots-of-mana.md  boots-of-outburst.md  chempunk-chainsword.md  cosmic-drive.md  crown-of-the-shattered-queen.md  crystalline-reflector.md  dawnshroud.md  dead-mans-plate.md  deaths-dance.md  divine-sunderer.md  dream-maker.md  duskblade-of-draktharr.md  eclipse.md  edge-of-night.md  essence-reaver.md  force-of-nature.md  frozen-heart.md  galeforce.md  gargoyle.md  glorious.md  gluttonous-greaves.md  (+79 more)
lib/: overlay.py  transcript.py  video.py
tests/: test_overlay.py  test_video_cache.py  test_yt_integration.py
wildriftfire/: champion.py  items.py
(+65 files in other folders)
