[project]
name = "wrtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "google-genai>=1.13.0",
    "httpx>=0.28.1",
    "opencv-python-headless>=4.10.0",
    "Pillow>=11.0.0",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.2",
    "youtube-transcript-api>=1.0.3",
    "yt-dlp>=2025.3.31",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not network'"
markers = [
    "network: tests that make real network calls (deselect with '-m not network')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.10",
]
